add simple splash page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello ES6
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>ES6 Rocks</title>
+    <style>
+        body {
+            background-color: whitesmoke;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        img {
+            height: 90vh;
+        }
+    </style>
+</head>
+<body>
+    <img src="logo.svg" alt="ES6Rocks">
+</body>
+</html>
