add home-link to posts

--- a/hello-world.html
+++ b/hello-world.html
@@ -31,7 +31,9 @@
             <h1 class="pageTitle">
                 ES6 Rocks
             </h1>
-            <img class="logo" src="images/logo.svg" alt="ES6Rocks" />
+            <a href="http://es6rocks.com">
+                <img class="logo" src="images/logo.svg" alt="ES6Rocks" />
+            </a>
         </section>
     </header>
 <body>
