fix Átila's picture / adjust template

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                         ES6 interview with David Herman
                     </a>
                     <section class="post__excerpt">
-                        <p>We did a nice interview with <a href="https://twitter.com/littlecalculist">David Herman</a> about his thoughts about ES6.<br>David is the principal researcher and founder of Mozilla Research, where he works to expand the foundations of the Open Web. He participate in a number of Web platform projects, including: <a href="http://taskjs.org/">task.js</a>, <a href="http://sweetjs.org/">sweet.js</a>, <a href="http://asmjs.org/">asm.js</a>, <a href="http://www.rust-lang.org/">Rust</a>, <a href="https://github.com/mozilla/servo/">Servo</a> and Parallel JS.  </p>
+                        <p>We did a nice interview with <a href="https://twitter.com/littlecalculist">David Herman</a> about his thoughts about ES6.
+David is the principal researcher and founder of Mozilla Research, where he works to expand the foundations of the Open Web. He participates in a number of Web platform projects, including: <a href="http://taskjs.org/">task.js</a>, <a href="http://sweetjs.org/">sweet.js</a>, <a href="http://asmjs.org/">asm.js</a>, <a href="http://www.rust-lang.org/">Rust</a>, <a href="https://github.com/mozilla/servo/">Servo</a> and Parallel JS.</p>
 
                     </section>
                 </article>
@@ -206,7 +207,7 @@ The mission here is to discuss about <a href="http://wiki.ecmascript.org/doku.ph
         <li class="organizers__item">
             <figure class="organizers__pic">
                 <a class="" href="http://twitter.com/atilafassina">
-                    <img class="" src="https://pbs.twimg.com/profile_images/378800000380374908/7b5cb905760b8d3e3ea6e03732845c33_400x400.jpeg" alt="Átila Fassina photo"/>
+                    <img class="" src="https://pbs.twimg.com/profile_images/485854342646222848/Ds8M-ezg_400x400.jpeg" alt="Átila Fassina photo"/>
                 </a>
                 <figcaption>
                     <a class="organizers__name" href="http://twitter.com/atilafassina">Átila Fassina</a>
